try fix incorrect assets links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>easy-navi</title>
     <meta name="description" content="easy-navi è un navigatore per moto economico, sempre installato, con indicazioni semplici senza ricarica batteria. Accendilo, imposta la destinazione tramite l'app e parti. Progettato per la massima semplicità e affidabilità, senza GPS né batteria.">
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.ico" />
 
     <!-- Nel caso ci siano piu icone, per tema dark e light -->
     <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" media="(prefers-color-scheme: light)" /> -->
@@ -268,42 +268,42 @@
 
                             <div class="swiper-slide">
                                 <div class="content [--hue:20]">
-                                    <img src="public/img/1.webp" alt="1" srcset="">
+                                    <img src="./public/img/1.webp" alt="1" srcset="">
                                     <span class="glow"><span></span></span>
                                 </div>
                             </div>
 
                             <div class="swiper-slide">
                                 <div class="content [--hue:125]">
-                                    <img src="public/img/2.webp" alt="2" srcset="">
+                                    <img src="./public/img/2.webp" alt="2" srcset="">
                                     <span class="glow"><span></span></span>
                                 </div>
                             </div>
 
                             <div class="swiper-slide">
                                 <div class="content [--hue:280]">
-                                    <img src="public/img/3.webp" alt="3" srcset="">
+                                    <img src="./public/img/3.webp" alt="3" srcset="">
                                     <span class="glow"><span></span></span>
                                 </div>
                             </div>
 
                             <div class="swiper-slide">
                                 <div class="content [--hue:60]">
-                                    <img src="public/img/4.webp" alt="4" srcset="">
+                                    <img src="./public/img/4.webp" alt="4" srcset="">
                                     <span class="glow"><span></span></span>
                                 </div>
                             </div>
 
                             <div class="swiper-slide">
                                 <div class="content [--hue:165]">
-                                    <img src="public/img/5.webp" alt="5" srcset="">
+                                    <img src="./public/img/5.webp" alt="5" srcset="">
                                     <span class="glow"><span></span></span>
                                 </div>
                             </div>
 
                             <div class="swiper-slide">
                                 <div class="content [--hue:330]">
-                                    <img src="public/img/6.webp" alt="6" srcset="">
+                                    <img src="./public/img/6.webp" alt="6" srcset="">
                                     <span class="glow"><span></span></span>
                                 </div>
                             </div>
