attempt bugfix missing resources

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                 </div>
 
-                <img class="object-cover object-center flex-1 opacity-80 -translate-x-1/4 lg:transform-none" src="/assets/home-CwUxuteN.webp" alt="easy-navi example" srcset="" />
+                <img class="object-cover object-center flex-1 opacity-80 -translate-x-1/4 lg:transform-none" src="./assets/home-CwUxuteN.webp" alt="easy-navi example" srcset="" />
             </div>
 
             <!-- NEWS -->
