try fix incorrect assets links

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
                 </div>
 
-                <img class="object-cover object-center flex-1 opacity-80 -translate-x-1/4 lg:transform-none" src="public/img/home.webp" alt="easy-navi example" srcset="" />
+                <img class="object-cover object-center flex-1 opacity-80 -translate-x-1/4 lg:transform-none" src="./public/img/home.webp" alt="easy-navi example" srcset="" />
             </div>
 
             <!-- NEWS -->
@@ -481,14 +481,14 @@
                     <h2 class="text-center">Android</h2>
                     <li>
                         <a href="#download" class="flex card hover:bg-[--tabs-light-bg] hover:dark:bg-[--tabs-dark-bg] !p-4 transition-colors items-center bg-transparent">
-                            <img class="rounded-lg size-12" src="img/icon_app.png" alt="android app">
+                            <img class="rounded-lg size-12" src="./img/icon_app.png" alt="android app">
                             <span class="text-gray-600 dark:text-white">easy-navi.apk v-1.1</span>
                         </a>
                     </li>
                     
                     <li>
                         <a href="#download" class="flex card hover:bg-[--tabs-light-bg] hover:dark:bg-[--tabs-dark-bg] !p-4 transition-colors items-center bg-transparent">
-                            <img class="rounded-lg size-12" src="img/icon_app.png" alt="android app">
+                            <img class="rounded-lg size-12" src="./img/icon_app.png" alt="android app">
                             <span class="text-gray-600 dark:text-white">easy-navi.apk v-1.0</span>
                         </a>
                     </li>
@@ -499,14 +499,14 @@
                     <h2 class="text-center">Firmware</h2>
                     <li>
                         <a href="#download" class="flex card hover:bg-[--tabs-light-bg] hover:dark:bg-[--tabs-dark-bg] !p-4 transition-colors items-center bg-transparent">
-                            <img class="rounded-lg size-12" src="img/icon_rom.png" alt="rom">
+                            <img class="rounded-lg size-12" src="./img/icon_rom.png" alt="rom">
                             <span class="text-gray-600 dark:text-white">20240325_easy-navi.uf2</span>
                         </a>
                     </li>
                     
                     <li>
                         <a href="#download" class="flex card hover:bg-[--tabs-light-bg] hover:dark:bg-[--tabs-dark-bg] !p-4 transition-colors items-center bg-transparent">
-                            <img class="rounded-lg size-12" src="img/icon_rom.png" alt="rom">
+                            <img class="rounded-lg size-12" src="./img/icon_rom.png" alt="rom">
                             <span class="text-gray-600 dark:text-white">20230801_easy-navi.uf2</span>
                         </a>
                     </li>
