20241201: Attempt fixing langToggle

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 
     <!-- MAIN APP script -->
     <script type="module" src="./main.js"></script>
+
+    <!-- #20241201: Attempt fix langToggle -->
+    <script type="text/javascript" src="./main.js"></script>
+    
 </head>
 
 <body>
