--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
     <!-- MAIN APP script -->
     <script type="module" src="./main.js"></script>
 
+    <script type="text/javascript">
+        // LANGUAGE TOGGLER
+        function langToggle() {
+        let isItalian = document.documentElement.getAttribute('lang').includes('it');
+        let newLang = isItalian ? 'en' : 'it'
+        document.documentElement.setAttribute('lang', newLang);
+        document.querySelector('#lang-toggle').className = newLang;
+        }
+    </script>
+
 </head>
 
 <body>
