20241204: Aggiunti commenti degli utenti

--- a/index.html
+++ b/index.html
@@ -358,15 +358,16 @@
                 <div class="card group">
                     <span class="relative block rounded-[--avatar-border-radius] text-lg size-10">
                         <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="John Doe"
-                            src="https://randomuser.me/api/portraits/men/2.jpg" loading="lazy" width="120" height="120">
+                            src="./public/img/user.webp" loading="lazy" width="120" height="120">
                     </span>
                     <div class="w-[calc(100%-3.25rem)]">
-                        <h3 class="font-medium text-gray-950 dark:text-white">Oketa Fred</h3>
+                        <h3 class="font-medium text-gray-950 dark:text-white">Andrea</h3>
                         <blockquote class="mt-3">
                             <p class="text-gray-700 dark:text-gray-300">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio autem veritatis minus
-                                alias quisquam architecto similique voluptate obcaecati, soluta aperiam adipisci neque,
-                                rem illo vel consequatur sapiente eligendi perferendis nisi.
+                                Nonostante il poco utilizzo posso dire tranquillamente che il prodotto fa ciò che promette. 
+                                Indicazioni senza fronzoli chiare e precise, senza distrazioni alla guida. 
+                                Validissimo il supporto creato ad hoc per ospitarlo, semplice ma efficace. 
+                                Posso ritenermi più che soddisfatto di aver acquistato un ottimo prodotto.
                             </p>
                         </blockquote>
                     </div>
@@ -376,16 +377,18 @@
                 <div class="card group">
                     <span class="relative block rounded-[--avatar-border-radius] text-lg size-10">
                         <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="John Doe"
-                            src="https://randomuser.me/api/portraits/men/10.jpg" loading="lazy" width="120"
+                            src="./public/img/user.webp" loading="lazy" width="120"
                             height="120">
                     </span>
                     <div class="w-[calc(100%-3.25rem)]">
-                        <h3 class="font-medium text-gray-950 dark:text-white">Khatab Wedaa</h3>
+                        <h3 class="font-medium text-gray-950 dark:text-white">Gabriele</h3>
                         <blockquote class="mt-3">
                             <p class="text-gray-700 dark:text-gray-300">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio autem veritatis minus
-                                alias quisquam architecto similique voluptate obcaecati, soluta aperiam adipisci neque,
-                                rem illo vel consequatur sapiente eligendi perferendis nisi.
+                                Le prime impressioni sono ottime, cercavo giusto qualcosa di semplice che mi permettesse di seguire il percorso senza troppe distrazioni 
+                                (tipo navigatore cartografico o cellulare) e soprattutto senza informazioni vocali (che a lungo andare con il vivavoce del casco infastidiscono). 
+                                Il vostro apparecchio centra perfettamente l'obiettivo, la cosa però più pratica è la possibilità di lasciarlo sempre attaccato al manubrio e 
+                                di averlo quindi sempre disponibile.
+                                Più avanti lo proverò su percorsi più lunghi e non solo casa-lavoro, però per ora mi sembra veloce nell'aggiornamento.
                             </p>
                         </blockquote>
                     </div>
@@ -395,16 +398,14 @@
                 <div class="card group">
                     <span class="relative block rounded-[--avatar-border-radius] text-lg size-10">
                         <img class="h-full w-full rounded-[--avatar-border-radius] object-cover" alt="John Doe"
-                            src="https://randomuser.me/api/portraits/men/11.jpg" loading="lazy" width="120"
+                            src="./public/img/user.webp" loading="lazy" width="120"
                             height="120">
                     </span>
                     <div class="w-[calc(100%-3.25rem)]">
-                        <h3 class="font-medium text-gray-950 dark:text-white">Rodrigo Aguilar</h3>
+                        <h3 class="font-medium text-gray-950 dark:text-white">Mario</h3>
                         <blockquote class="mt-3">
                             <p class="text-gray-700 dark:text-gray-300">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio autem veritatis minus
-                                alias quisquam architecto similique voluptate obcaecati, soluta aperiam adipisci neque,
-                                rem illo vel consequatur sapiente eligendi perferendis nisi.
+                                Ottimo prodotto, semplice e pratico.
                             </p>
                         </blockquote>
                     </div>
